# mautrix-cleanup

./: .gitignore  README.md  flake.nix  pyproject.toml
matrix_clean/: config.py  full.py  mautrix_discord.py  mautrix_signal.py  mautrix_telegram.py  mautrix_whatsapp.py  media_repo.py  quick.py  synapse.py  util.py
