[tool.poetry]
name = "matrix-clean"
version = "0.1.0"
description = "Cleaning tool for my matrix server"
authors = ["Charlotte \"poetry calls my name invalid\" Delenk <lotte@chir.rs>"]
readme = "README.md"
packages = [{ include = "matrix_clean" }]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"
aiodns = "^3.0.0"
sqlalchemy = "^2.0.5.post1"
tqdm = "^4.65.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
